--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-hook-inview": "^4.5.0",
     "react-icons": "^4.12.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.20.0",
