--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,9 @@
     "ajv": "^8.12.0",
     "antd": "^5.12.2",
     "flowbite-react": "^0.7.2",
+    "lucide-react": "^0.501.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
-    "react-alert": "^7.0.3",
-    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-inview": "^4.5.0",
